0.5.3.1 - A patch fix that removes unused files